<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="com.example.oddvicky.projetofinallistadetarefas.AboutAppActivity">

    <ImageView
        android:layout_width="@dimen/width_logo_splash"
        android:layout_height="@dimen/height_logo_splash"
        android:id="@+id/splash"
        android:background="@drawable/logo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_name"
        android:textColor="@color/babyBlue"
        android:paddingTop="@dimen/size_30"
        android:textSize="@dimen/logo_name_size"
        android:textStyle="bold"
        android:id="@+id/tv_LogoName"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developed_by"
        android:paddingTop="@dimen/size_30"
        android:textSize="@dimen/logo_name_size"
        android:textStyle="bold"
        android:id="@+id/tv_DevelopedBy"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_version_1_0"
        android:textSize="@dimen/logo_name_size"
        android:textStyle="bold"
        android:id="@+id/tv_AppVersion"
        />

</LinearLayout>
